--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,8 +4,8 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "com.example.android.muniappbeta"
-        minSdkVersion 15
+        applicationId "pe.gob.munihuacho.municipalidadhuacho"
+        minSdkVersion 10
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -27,8 +27,6 @@ dependencies {
     compile files('libs/ksoap2-android-assembly-3.4.0-jar-with-dependencies.jar')
     compile 'com.android.support:appcompat-v7:25.2.0'
     compile 'com.android.support:design:25.2.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:25.2.0'
-    compile 'com.android.support:cardview-v7:25.2.0'
     testCompile 'junit:junit:4.12'
 }
